Fixed red x alignment

--- a/app/assets/stylesheets/new_styles.scss
+++ b/app/assets/stylesheets/new_styles.scss
@@ -411,9 +411,7 @@ a.remove-association {
   text-decoration: none;
   font-weight: bold;
   font-size: 20px;
-  vertical-align: middle;
-  padding-top: 3px;
-  display:inline-block;
+  display: inline-block;
   color: $brand-danger;
   &:hover {
     text-decoration: none;
